k8s-watcher/k8s/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: k8s-watcher
  labels:
    app: k8s-watcher
spec:
  selector:
    matchLabels:
      app: k8s-watcher
  template:
    metadata:
      labels:
        app: k8s-watcher
    spec:
      serviceAccountName: poc-admin
      automountServiceAccountToken: true
      containers:
      - name: k8s-watcher
        image: asarkar/k8s-watcher
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
      - name: mongo
        image: mongo:3.6.0-jessie
        ports:
        - containerPort: 27017
