k8s-watcher/k8s/k8s-watcher-test-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: k8s-watcher-test
  labels:
    app: k8s-watcher-test
spec:
  selector:
    matchLabels:
      app: k8s-watcher-test
  template:
    metadata:
      labels:
        app: k8s-watcher-test
    spec:
      containers:
      - name: k8s-watcher-test
        image: busybox
        imagePullPolicy: IfNotPresent
        command: ["tail"]
        args: ["-f", "/dev/null"]
