k8s-watcher/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-watcher
  labels:
    app: k8s-watcher
spec:
  ports:
  - name: web
    port: 8080
    nodePort: 31000
  selector:
    app: k8s-watcher
  type: NodePort
