k8s-watcher/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: k8s-watcher
 annotations:
   kubernetes.io/ingress.class: traefik
 labels:
   app: k8s-watcher
spec:
   rules:
   - host: k8s-watcher.abhijitsarkar.org
     http:
       paths:
       - path: /
         backend:
           serviceName: k8s-watcher
           servicePort: web
